Time: 7 ms (52.83%), Space: 42 MB (50.76%) - LeetHub