@@ -1,14 +1,31 @@
 class Solution {
     public int[][] merge(int[][] intervals) {
         Arrays.sort(intervals, (a,b)-> a[0]-b[0]);
-        // last list 빼올 수 있는거: linkedList
-        LinkedList<int[]> result = new LinkedList<>();
-        for(int[] interval: intervals){
-            if(result.isEmpty() || result.getLast()[1]<interval[0])
-                result.add(interval);
-            else
-                result.getLast()[1] = Math.max(result.getLast()[1],interval[1]);
+        
+        System.out.println("");
+        
+        ArrayList<int[]> ans = new ArrayList<>();
+        
+        for(int[] interval : intervals){            
+            if( ans.size() !=0 && ans.get(ans.size()-1)[1] >=interval[0]){
+                // int[]
+                int[] prev = ans.get(ans.size()-1);       
+                
+                if(prev[1]>= interval[1])
+                    continue;
+                else
+                    prev[1] = interval[1];
+                
+            }else{
+                ans.add(interval);
+            }
         }
-        return result.toArray(new int[result.size()][2]);
+        
+        int[][] returnArr = new int[ans.size()][2];
+        for(int i=0; i< ans.size();i++){
+            returnArr[i] = ans.get(i);
+        }
+        
+        return returnArr;
     }
 }
